--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -1265,8 +1265,8 @@ a:not(.btn):not(.nav-link):not(.sidebar-brand){
                             <th style="width: 80px;">Avatar</th>
                             <th>Tên NV</th>
                             <th style="width: 100px; text-align: center;">
-                                <span class="d-none d-md-inline">🔴 Khẩn Cấp</span>
-                                <span class="d-md-none">🔴</span>
+                                <span class="d-none d-md-inline">🔥 Khẩn Cấp</span>
+                                <span class="d-md-none">🔥</span>
                             </th>
                             <th style="width: 100px; text-align: center;">
                                 <span class="d-none d-md-inline">⭐ Quan Trọng</span>
